Được tạo bằng Colaboratory

--- a/Numpy1.ipynb
+++ b/Numpy1.ipynb
@@ -6,7 +6,7 @@
       "name": "Numpy1",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyMFE1O2Mo7cit9PQS7+7F1u",
+      "authorship_tag": "ABX9TyMlf7N2b5TD7wgWiWQ0m+6o",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Bài 1: Xét không gian R3, một điểm A trong không gian này có tọa độ là (5, 7, 14). Hãy khởi tạo giá trị của điểm A nêu trên bằng Numpy."
+        "Bài 1: Xét không gian R3, một điểm A trong không gian này có tọa độ là (5, 7, 14). Hãy khởi tạo giá trị của điểm A nêu trên bằng Numpy."
       ],
       "metadata": {
         "id": "uZMaqs7PSVf-"
@@ -63,7 +63,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Bài 2: Mở rộng không gian lên R15, điểm A trong không gian này có tọa độ là (1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15). Hãy khởi tạo điểm A trong không gian 15 chiều này bằng Numpy."
+        "Bài 2: Mở rộng không gian lên R15, điểm A trong không gian này có tọa độ là (1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15). Hãy khởi tạo điểm A trong không gian 15 chiều này bằng Numpy."
       ],
       "metadata": {
         "id": "wlVuioL8SuuD"
@@ -84,7 +84,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Bài 3: Hãy viết chương trình sinh ngẫu nhiên một vector trong không gian Rn với n là số nguyên dương được nhập vào từ bàn phím."
+        "Bài 3: Hãy viết chương trình sinh ngẫu nhiên một vector trong không gian Rn với n là số nguyên dương được nhập vào từ bàn phím."
       ],
       "metadata": {
         "id": "kUejpJopSVR-"
@@ -107,7 +107,7 @@
       "cell_type": "markdown",
       "source": [
         "\n",
-        "#Bài 4: Vecto OA = [ 7 −5 8 ] Hãy viết chương trình tính chiều dài của vector OA"
+        "Bài 4: Vecto OA = [ 7 −5 8 ] Hãy viết chương trình tính chiều dài của vector OA"
       ],
       "metadata": {
         "id": "XgkqMTO0VyLN"
